kubernetes/1.5/src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-fronend
  template:
    metadata:
      labels:
        app: nginx-fronend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool-backend
  template:
    metadata:
      labels:
        app: multitool-backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-deployment
spec:
  ports:
  - name: nginx
    port: 9001
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-fronend


---
apiVersion: v1
kind: Service
metadata:
   name: backend-deployment
spec:
  ports:
  - name: multitool
    port: 9002
    protocol: TCP
    targetPort: 18080
  selector:
    app: multitool-backend
