kubernetes/1.5/src/deployment-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-fronend
  template:
    metadata:
      labels:
        app: nginx-fronend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool-backend
  template:
    metadata:
      labels:
        app: multitool-backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-deployment
spec:
  ports:
  - name: nginx
    port: 9001
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-fronend


---
apiVersion: v1
kind: Service
metadata:
   name: backend-deployment
spec:
  ports:
  - name: multitool
    port: 9002
    protocol: TCP
    targetPort: 18080
  selector:
    app: multitool-backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-deployment
                port:
                  number: 9001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-deployment
                port:
                  number: 9002
